Port GADZO Client to Minecraft 1.20.1 on Fabric
1.20.1 is the last version with a native Create Fabric build, so this is
the branch where a live Create integration can talk to the mod directly
instead of through Sinytra Connector. main stays on 26.2.

This is a rewrite of the Minecraft-facing layer, not a version bump. 26.2
uses a retained-mode GUI (GuiGraphicsExtractor, extractRenderState) while
1.20.1 is immediate-mode (DrawContext, render), the input callbacks take
primitives rather than event records, and 1.20.1 predates Fabric's move to
official mappings so the whole tree moves to Yarn naming.

Ported unchanged: easing, colour, animation, settings, module system,
config, input tracking, and the Create reference and stress calculator —
roughly 40% of the codebase has no Minecraft dependency at all.

Rewritten: Render2D, all three screens, the HUD registration path,
SystemProfile, HardwareHud, and all seven mixins against 1.20.1 targets
verified with javap.

Capabilities the older API cannot support are removed rather than stubbed,
so nothing presents a control that does nothing:

- No backdrop blur; 1.20.1 has no GUI blur, so screens dim instead.
- No CPU/GPU bottleneck verdict; there is no GPU timing API to base one on.
- No celestial toggle in Weather render, only precipitation.

In exchange, 1.20.1 exposes GlDebugInfo.getCpuInfo(), so the hardware
readout names the processor rather than only counting threads.

Toolchain: Loom 1.7.4 — the last line supporting Yarn mappings, since Loom
1.17 dropped the mappings configuration entirely — on Gradle 8.8 and Java
17. Fabric dependencies use modImplementation, which Loom 1.7 requires for
remapping and newer Loom does not.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01XMfxvrXrxQF8XZjaCC5x9G